@@ -276,6 +276,7 @@
 #define ACE_LACKS_UTSNAME_T
 #define ACE_LACKS_UNAME
 #define ACE_LACKS_WAIT
+#define ACE_LACKS_IOVEC
 
 #define ACE_HAS_SNPRINTF
 #define ACE_HAS_VFWPRINTF
