@@ -1,3 +1,15 @@
+Fri Oct 20 08:44:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+	* ace/os_include/sys/os_uio.h:
+	  We define iovec when ACE_WIN32 was defined, changed this to a new
+	  define, ACE_LACKS_IOVEC to make it easier to use with other platforms
+
+	* ace/config-win32-common.h:
+	  Added ACE_LACKS_IOVEC
+
+	* ace/config-rtems.h:
+	  When no networking has been configured, also define ACE_LACKS_IOVEC
+
 Thu Oct 19 22:28:59 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>
 
         * contrib/minizip/iowin32.c
